# levenshtein.awk

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  LICENSE.txt  Makefile.am  Makefile.in  README.md  configure  configure.ac  levenshtein.awk
share/: Makefile.am  Makefile.in  levenshtein.awk.in
tests/: Makefile.am  Makefile.in  levenshtein-test.awk  levenshtein-test.sh  test-runner.sh  words.txt
